force-app/main/default/objects/Contact/fields/Recruitment_Program__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Program__c</fullName>
    <inlineHelpText>This describes on which program Provider is recruited for</inlineHelpText>
    <label>Recruitment Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LA Care (IHSS+)</fullName>
            </value>
            <value>
                <fullName>IHSS+ A&amp;D</fullName>
            </value>
            <value>
                <fullName>Education Fund</fullName>
            </value>
            <value>
                <fullName>CDPH/UCSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>