force-app/main/default/objects/Contact/fields/Recruitment_Source__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Source__c</fullName>
    <label>Recruitment Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>April2018List1</fullName>
            </value>
            <value>
                <fullName>April2018List2</fullName>
            </value>
            <value>
                <fullName>April2018List3</fullName>
            </value>
            <value>
                <fullName>April2018List4</fullName>
            </value>
            <value>
                <fullName>August2012Import1</fullName>
            </value>
            <value>
                <fullName>August2017List2</fullName>
            </value>
            <value>
                <fullName>August2017List3</fullName>
            </value>
            <value>
                <fullName>August2017List4</fullName>
            </value>
            <value>
                <fullName>August2017List5</fullName>
            </value>
            <value>
                <fullName>August2017List6</fullName>
            </value>
            <value>
                <fullName>August2017List7</fullName>
            </value>
            <value>
                <fullName>August2017List8</fullName>
            </value>
            <value>
                <fullName>CDPHJanuary2020List1</fullName>
            </value>
            <value>
                <fullName>CDPHJanuary2020List2</fullName>
            </value>
            <value>
                <fullName>CDPHJanuary2020List3</fullName>
            </value>
            <value>
                <fullName>CDPHJuly2020List1</fullName>
            </value>
            <value>
                <fullName>CDPHOctober2020List1</fullName>
            </value>
            <value>
                <fullName>Cell-Ed</fullName>
            </value>
            <value>
                <fullName>Dignity Campaign</fullName>
            </value>
            <value>
                <fullName>Do Not Use</fullName>
            </value>
            <value>
                <fullName>Fill A Seat Campaign</fullName>
            </value>
            <value>
                <fullName>HC-CPR</fullName>
            </value>
            <value>
                <fullName>HCIT</fullName>
            </value>
            <value>
                <fullName>Health Net</fullName>
            </value>
            <value>
                <fullName>July2018List1</fullName>
            </value>
            <value>
                <fullName>July2018List2</fullName>
            </value>
            <value>
                <fullName>July2018List3</fullName>
            </value>
            <value>
                <fullName>July2019List1</fullName>
            </value>
            <value>
                <fullName>JuneList12020</fullName>
            </value>
            <value>
                <fullName>LA Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>