force-app/main/default/objects/Contact/fields/Recruitment_Type__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Type__c</fullName>
    <label>Recruitment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>