force-app/main/default/objects/Contact/fields/RolodexType__c.field-meta.xml
<CustomField>
    <fullName>RolodexType__c</fullName>
    <label>RolodexType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>