force-app/main/default/objects/Contact/fields/Screening_Question_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Screening_Question_Submitted_Date__c</fullName>
    <label>Screening Question Submitted Date</label>
    <type>Date</type>
</CustomField>