force-app/main/default/objects/Contact/fields/Smart_phone__c.field-meta.xml
<CustomField>
    <fullName>Smart_phone__c</fullName>
    <label>Smart phone?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>