force-app/main/default/objects/Contact/fields/SQCheck__c.field-meta.xml
<CustomField>
    <fullName>SQCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQCheck</label>
    <type>Checkbox</type>
</CustomField>