force-app/main/default/objects/Contact/fields/Start_Date_Primary__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Primary__c</fullName>
    <label>Start Date - Primary</label>
    <type>Date</type>
</CustomField>