force-app/main/default/objects/Contact/fields/Start_Date_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Secondary__c</fullName>
    <label>Start Date - Secondary</label>
    <type>Date</type>
</CustomField>