force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Enrolled in a Class</fullName>
                <isActive>false</isActive>
                <label>Enrolled in a Class</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <isActive>false</isActive>
                <label>Not Interested</label>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
                <isActive>false</isActive>
                <label>Not Qualified</label>
            </value>
            <value>
                <fullName>Ongoing_Assessment</fullName>
                <isActive>false</isActive>
                <label>Ongoing Assessment</label>
            </value>
            <value>
                <fullName>Provider Participation Form Submitted</fullName>
                <isActive>false</isActive>
                <label>Provider Participation Form Submitted</label>
            </value>
            <value>
                <fullName>Qualified As Provider</fullName>
                <isActive>false</isActive>
                <label>Qualified As Provider</label>
            </value>
            <value>
                <fullName>Recruited</fullName>
                <isActive>false</isActive>
                <label>Recruited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>