force-app/main/default/objects/Contact/fields/Status_C__c.field-meta.xml
<CustomField>
    <fullName>Status_C__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status - C</label>
    <type>Text</type>
</CustomField>