force-app/main/default/objects/Contact/fields/Status_Primary__c.field-meta.xml
<CustomField>
    <fullName>Status_Primary__c</fullName>
    <inlineHelpText>Status of the Provider with the specified Primary Edfund Facility</inlineHelpText>
    <label>Status - Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>