force-app/main/default/objects/Contact/fields/Status_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Status_Secondary__c</fullName>
    <inlineHelpText>Status of the Provider with the specified Secondary Edfund Facility</inlineHelpText>
    <label>Status - Secondary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>