force-app/main/default/objects/Contact/fields/Total_income_last_year__c.field-meta.xml
<CustomField>
    <fullName>Total_income_last_year__c</fullName>
    <label>Total income last year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>