force-app/main/default/objects/Contact/fields/Training_status__c.field-meta.xml
<CustomField>
    <fullName>Training_status__c</fullName>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waitlist</fullName>
                <default>true</default>
                <label>Waitlist</label>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>