force-app/main/default/objects/Contact/fields/Training_Status_C__c.field-meta.xml
<CustomField>
    <fullName>Training_Status_C__c</fullName>
    <formula>TEXT(Training_status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Status - C</label>
    <type>Text</type>
</CustomField>