force-app/main/default/objects/Contact/fields/User_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Status__c</fullName>
    <label>User Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspend</fullName>
            </value>
            <value>
                <fullName>Revoke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>