force-app/main/default/objects/Contact/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Education Fund Board</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Funding Source</fullName>
            </value>
            <value>
                <fullName>CLTCEC Partner</fullName>
            </value>
            <value>
                <fullName>CLTCEC Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>