force-app/main/default/objects/Contact/fields/UserIDNumber__c.field-meta.xml
<CustomField>
    <fullName>UserIDNumber__c</fullName>
    <label>UserIDNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>