force-app/main/default/objects/Contact/fields/Verify_Password__c.field-meta.xml
<CustomField>
    <fullName>Verify_Password__c</fullName>
    <label>Verify Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>