force-app/main/default/objects/Contact/fields/What_are_the_timings__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_timings__c</fullName>
    <label>What are the timings?</label>
    <type>Time</type>
</CustomField>