force-app/main/default/objects/Contact/fields/What_is_the_ailment__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_ailment__c</fullName>
    <label>What is the ailment?</label>
    <type>TextArea</type>
</CustomField>