force-app/main/default/objects/Contact/fields/Which_device_do_you_regularly_use__c.field-meta.xml
<CustomField>
    <fullName>Which_device_do_you_regularly_use__c</fullName>
    <label>Which device do you regularly use?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>