force-app/main/default/objects/Contact/fields/Would_you_take_a_class_if_it_were_online__c.field-meta.xml
<CustomField>
    <fullName>Would_you_take_a_class_if_it_were_online__c</fullName>
    <label>Would you take a class if it were online</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>