force-app/main/default/objects/Contact/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Select this to enter Home Care or EdFund Provider details</description>
    <label>General</label>
</RecordType>