force-app/main/default/objects/Contact/validationRules/Not_Interested_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Interested_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Recruitment_Status__c, &apos;Not Interested&apos;) &amp;&amp; ISBLANK(Not_Interested_Reason__c)</errorConditionFormula>
    <errorDisplayField>Not_Interested_Reason__c</errorDisplayField>
    <errorMessage>Please populate the &apos;Not Interested&apos; reason</errorMessage>
</ValidationRule>