force-app/main/default/objects/Contact/listViews/Home_Care_Providers.listView-meta.xml
<ListView>
    <fullName>Home_Care_Providers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Qualified As Provider</value>
    </filters>
    <label>Home Care Providers</label>
</ListView>