force-app/main/default/objects/Contact/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_number__c</columns>
    <columns>Training_status__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
</ListView>