force-app/main/default/objects/Contact/listViews/Seeker.listView-meta.xml
<ListView>
    <fullName>Seeker</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>0125g000000PWJF</value>
    </filters>
    <label>Seeker</label>
</ListView>